--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🧩 Prática III – Aplicação Web Dinâmica com JavaScript Avançado</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="dist/style.min.css">
+  <link rel="stylesheet" href="style.min.css">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Ir para o conteúdo</a>
@@ -37,6 +37,6 @@
   </template>
 
   <script type="module" src="main.js"></script>
-  <script src="dist/app.min.js" defer></script>
+  <script src="app.min.js" defer></script>
 </body>
 </html>
