--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🧩 Prática III – Aplicação Web Dinâmica com JavaScript Avançado</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="style.min.css">
+ <link rel="stylesheet" href="./styles.css">
+<script type="module" src="./main.js"></script>
+
 </head>
 <body>
   <a class="skip-link" href="#main-content">Ir para o conteúdo</a>
