--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a class="skip-link" href="#main-content">Ir para o conteúdo</a>
   <header role="banner" class="site-header">
     <div class="container">
-      <h1 id="brand">Prática IIV - (acessibilidade)</h1>
+      <h1 id="brand">Prática IV - (acessibilidade)</h1>
       <nav role="navigation" aria-label="Menu principal">
         <ul class="nav" id="main-nav"><li><a href="#/">Home</a></li><li><a href="#/cadastro">Cadastro</a></li><li><a href="#/about">Sobre</a></li></ul>
       </nav>
