--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🧩 Prática III – Aplicação Web Dinâmica com JavaScript Avançado</title>
+  <title>🧩 Prática IV – Aplicação Web Dinâmica com JavaScript Avançado</title>
  <link rel="stylesheet" href="./styles.css">
 <script type="module" src="./main.js" type="module"></script>
 
