--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="./styles.css" />
 
   <!-- Script principal da aplicação -->
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./app.js"></script>
+
 
   <!-- Ícone do site (opcional, pode remover se não tiver o arquivo) -->
   <link rel="icon" href="./favicon.ico" type="image/x-icon" />
