--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
   <!-- Estilos principais -->
   <link rel="stylesheet" href="./styles.css" />
 
- 
+  <!-- Script principal da aplicação -->
+  <script type="module" src="./main.js"></script>
 
+  <!-- Ícone do site (opcional, remova se não tiver favicon.ico) -->
+  <link rel="icon" href="./favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
   <!-- Link para acessibilidade -->
   <a class="skip-link" href="#conteudo">Ir para o conteúdo</a>
 
-  <!-- Cabeçalho com botões de acessibilidade -->
+  <!-- Cabeçalho -->
   <header class="site-header" role="banner">
     <div class="container">
       <h1 id="brand">Prática IV - Acessível</h1>
@@ -44,7 +47,6 @@
   </template>
 
   <!-- Scripts -->
-  <script type="module" src="./app.js"></script>
   <script type="module" src="./acessibilidade.js"></script>
 
   <!-- Rodapé -->
